--- a/P2_2020BQ601_2020AU601_2020QQ650/Views/Shared/_Layout.cshtml
+++ b/P2_2020BQ601_2020AU601_2020QQ650/Views/Shared/_Layout.cshtml
@@ -20,13 +20,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Departamentos" asp-action="Departamentos">Departamentos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Departamentos" asp-action="Index">Departamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Generos" asp-action="Generos">Generos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Generos" asp-action="Index">Generos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CasosReportados" asp-action="Casos Reportados">Casos Reportados</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CasosReportados" asp-action="Index">Casos Reportados</a>
                         </li>
                     </ul>
                 </div>
