--- a/P2_2020BQ601_2020AU601_2020QQ650/Views/CasosReportados/Index.cshtml
+++ b/P2_2020BQ601_2020AU601_2020QQ650/Views/CasosReportados/Index.cshtml
@@ -5,7 +5,7 @@
     </div>
 </div>
 
-<form>
+<form asp-action="crearRegistro">
     <div>
         <h2 class="fw-bolder">Reportar casos</h2>
     </div>
