--- a/P2_2020BQ601_2020AU601_2020QQ650/Views/CasosReportados/Index.cshtml
+++ b/P2_2020BQ601_2020AU601_2020QQ650/Views/CasosReportados/Index.cshtml
@@ -76,6 +76,9 @@
             </tbody>
 
          </table>
-
-    
 </form>
+
+  <footer class="text-center">
+    <p> Derechos Reservados: Daniel Alejandro Barrera Quezada - Luis Felipe Quezada Quezada - Rodrigo Neftali Aguilar Uribe</p>
+      
+  </footer>
